Simplified code using Set.of() (Java SE 9+). This is based on the contribution of user github.com/Oondanomala.